# tradr_uol

./: .gitignore  .rosinstall  README.md
ms_octomap_mapping/: CHANGELOG.rst  package.xml
ms_octomap_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
ms_octomap_server/include/ms_octomap_server/: OctomapServer.h
src/tradr-loc-map-nav/path_planner/: CMakeLists.txt
src/tradr-loc-map-nav/path_planner_rviz_wp_plugin/: CMakeLists.txt  package.xml
src/tradr-loc-map-nav/trajectory_control/: CMakeLists.txt
src/tradr-simulation/vrep_ugv_plugin/: CMakeLists.txt
src/tradr-ugv-base/nifti_teleop/: CMakeLists.txt
tradr-loc-map-nav/path_planner/: CMakeLists.txt  package.xml
tradr-loc-map-nav/path_planner/include/: PathPlannerManager.h
tradr-loc-map-nav/path_planner/launch/: sim_compute_normals_thorvald.launch  sim_main_path_planner_ugv1.launch  sim_path_planner_manager_thorvald.launch  sim_path_planner_manager_ugv1.launch  sim_traversability_thorvald.launch
tradr-loc-map-nav/path_planner/rviz/: sim_path_planner_thorvald.rviz  sim_path_planner_thorvald_new.rviz
tradr-loc-map-nav/path_planner/src/: ConversionPcl.cpp  path_planner_manager.cpp
tradr-loc-map-nav/path_planner_rviz_wp_plugin/: CMakeLists.txt  package.xml
tradr-loc-map-nav/path_planner_rviz_wp_plugin/src/: NavigationDialogUI.cpp  WaypointsTool.cpp
tradr-loc-map-nav/path_planner_rviz_wp_plugin/ui/: NavigationDialog.ui
tradr-loc-map-nav/tradr_path_planner/: CHANGELOG.rst  package.xml
tradr-loc-map-nav/tradr_path_planner/cfg/: ClusterPcl.cfg  NormalEstimationPcl.cfg  TravAnalyzer.cfg
tradr-loc-map-nav/tradr_path_planner/include/: ClusterPcl.h  ConversionPcl.h  QueuePathPlanner.h
tradr-loc-map-nav/tradr_path_planner/launch/: main_path_planner.launch  main_queue_path_planner.launch  mrc_tds.launch  octomap_with_mux.launch  old_main_path_planner.launch  path_planner.launch  path_planner_manager.launch  queue_part1.launch  queue_path_planner.launch  rviz_sim_path_planning.launch  sim_compute_normals_ugv1.launch  sim_compute_normals_volumetric_ugv2.launch  sim_laser_mapper_and_params_ugv1.launch  sim_laser_mapper_and_params_ugv2.launch  sim_laser_mapper_and_volumetric_mapping_ugv1.launch  sim_main_path_planner_ugv2.launch  sim_main_queue_path_planner_ugv1.launch  sim_main_queue_path_planner_ugv2.launch  sim_mapping_ugv1.launch  sim_nifti_laser_assembler_ugv2.launch  sim_path_planner_manager_ugv2.launch  sim_path_planner_ugv1.launch  sim_queue_path_planner_ugv2.launch  sim_traversability_ugv1.launch  sim_traversability_ugv2.launch  sim_volumetric_mapping_ugv2.launch  test_path_planner_input_from_mapping.launch  test_path_planner_input_from_mapping_with_octomap.launch  traversability_analysis.launch
tradr-loc-map-nav/tradr_path_planner/rviz/: path_planner.rviz  sim_robots.rviz
tradr-loc-map-nav/tradr_path_planner/scripts/: path_planning_launcher  path_planning_launcher_no_octomap  screen_launcher_pathplanning  screen_launcher_ugvmulti_lasermapper_pathplanner  sim_launcher_nimbro_robot  sim_launcher_ugv  sim_launcher_ugv1n2  sim_launcher_ugvs
tradr-loc-map-nav/tradr_path_planner/src/: PathPlannerManager.cpp  TravAnalyzer.cpp  path_planner_manager.cpp  traversability.cpp
tradr-loc-map-nav/tradr_path_planner_rviz_wp_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description_SIM1.xml
tradr-loc-map-nav/tradr_path_planner_rviz_wp_plugin/include/: NavigationDialogUI.h  PriorityDialogUI.h  (+4 more)
tradr-loc-map-nav/tradr_trajectory_control/: CHANGELOG.rst  package.xml
tradr-loc-map-nav/trajectory_control/: CMakeLists.txt  package.xml
tradr-msgs/exploration_msgs/: CHANGELOG.rst  package.xml
tradr-msgs/networkanalysis_msgs/: CHANGELOG.rst  package.xml
tradr-msgs/nifti_robot_driver_msgs/: CHANGELOG.rst  package.xml
tradr-msgs/patrolling_build_graph_msgs/: CHANGELOG.rst  package.xml
tradr-msgs/robot_trajectory_saver_msgs/: CHANGELOG.rst  package.xml
tradr-msgs/stamped_msgs/: CHANGELOG.rst  package.xml
tradr-msgs/tradr_trajectory_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tradr-msgs/trajectory_control_msgs/: CMakeLists.txt  package.xml
tradr-msgs/wireless_network_msgs/: CHANGELOG.rst  package.xml
tradr-simulation/vrep_common/: CHANGELOG.rst  package.xml
tradr-simulation/vrep_ugv_plugin/: CHANGELOG.rst  package.xml
tradr-simulation/vrep_ugv_simulation/: CHANGELOG.rst  package.xml
tradr-simulation/vrep_ugv_simulation/scripts/: vrep_ugv_teleop_key2  vrep_ugv_teleop_key_old
tradr-ugv-base/nifti_launchers/: CHANGELOG.rst  package.xml
tradr-ugv-base/nifti_robot_description/: CHANGELOG.rst  package.xml
tradr-ugv-base/nifti_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
tradr_loc_map_nav/tradr_path_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml
tradr_loc_map_nav/tradr_path_planner_rviz_wp_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml  plugin_description_NIMBRO.xml  plugin_description_SIM2.xml  plugin_description_SIM3.xml
tradr_loc_map_nav/tradr_trajectory_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
tradr_msgs/exploration_msgs/: CHANGELOG.rst  package.xml
tradr_msgs/networkanalysis_msgs/: CHANGELOG.rst  package.xml
tradr_msgs/nifti_robot_driver_msgs/: CHANGELOG.rst  package.xml
tradr_msgs/patrolling_build_graph_msgs/: CHANGELOG.rst  package.xml
tradr_msgs/robot_trajectory_saver_msgs/: CHANGELOG.rst  package.xml
tradr_msgs/stamped_msgs/: CHANGELOG.rst  package.xml
tradr_msgs/tradr_trajectory_control_msgs/: CHANGELOG.rst  package.xml
tradr_msgs/wireless_network_msgs/: CHANGELOG.rst  package.xml
tradr_simulation/vrep_common/: CHANGELOG.rst  package.xml
tradr_simulation/vrep_ugv_plugin/: CHANGELOG.rst  package.xml
tradr_simulation/vrep_ugv_simulation/: CHANGELOG.rst  package.xml
tradr_simulation/vrep_ugv_simulation/scripts/: vrep_ugv_teleop_key  vrep_ugv_teleop_key_robot
tradr_ugv_base/nifti_launchers/: CHANGELOG.rst  CMakeLists.txt  package.xml
tradr_ugv_base/nifti_robot_description/: CHANGELOG.rst  package.xml
tradr_ugv_base/nifti_teleop/: CHANGELOG.rst  package.xml
(+90 files in other folders)
