<package>
  <name>ms_octomap_mapping</name>
  <version>1.0.3</version>
  <description>
    Mapping tools to be used with the <a href="http://octomap.github.io/">OctoMap library</a>, implementing a 3D occupancy grid mapping.
  </description>
  <author email="hornunga@informatik.uni-freiburg.de">Armin Hornung</author>

  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>
  <maintainer email="mhanheide@lincoln.ac.uk">Marc Hanheide</maintainer>
  <maintainer email="mario.gianni@plymouth.ac.uk">Mario Gianni</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/octomap_mapping</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_mapping/issues</url>
  <url type="repository">https://github.com/OctoMap/octomap_mapping</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ms_octomap_server</run_depend>

  <export>
    <metapackage/>
  </export>


</package>
