<?xml version="1.0"?>
<package format="2">
  <name>stamped_msgs</name>

  <version>1.0.9</version>

  <description>std_msgs with headers (timestamps).</description>

  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>
  <maintainer email="mhanheide@lincoln.ac.uk">Marc Hanheide</maintainer>
  <maintainer email="mario.gianni@plymouth.ac.uk">Mario Gianni</maintainer>

  <license>TRADR</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
