<?xml version="1.0"?>
<package>
  <name>wireless_network_msgs</name>
  <version>1.0.6</version>
  <description>A set of useful messages for the TRADR project related to Wireless network monitoring, mapping and predictions</description>
  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>
  <maintainer email="mhanheide@lincoln.ac.uk">Marc Hanheide</maintainer>
  <maintainer email="mario.gianni@plymouth.ac.uk">Mario Gianni</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/wireless_network_msgs</url> -->
  <author email="ramviyas@kth.se">Ramviyas Parasuraman</author>
  <author email="caccamo@kth.se">Sergio Caccamo</author>
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
