<package>
  <name>vrep_common</name>
  <description>Common messages</description>
  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>
  <maintainer email="mhanheide@lincoln.ac.uk">Marc Hanheide</maintainer>
  <maintainer email="mario.gianni@plymouth.ac.uk">Mario Gianni</maintainer>
  <version>1.0.9</version>
  <author>Marc</author>
  <license>GPLv3</license>
  <url>http://www.coppeliarobotics.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
