<?xml version="1.0"?>
<package>
  <name>vrep_ugv_simulation</name>
  <version>1.0.6</version>
  <description>The VREP UGV simulation package</description>

  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>
  <maintainer email="mhanheide@lincoln.ac.uk">Marc Hanheide</maintainer>
  <maintainer email="mario.gianni@plymouth.ac.uk">Mario Gianni</maintainer>

  <author email="freda@diag.uniroma1.it">Luigi Freda and Mario Gianni</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
